Fix broken css on email form field

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -177,7 +177,7 @@ header.typeset {
 
 form {
   div {
-    input[type="text"] {
+    input[type="email"] {
       font-size: 1em;
       padding: 1rem 1rem;
       border: 1px solid $dark-grey;
